<resources>
    <string name="app_name">NBA Players</string>
    <string name="alert">More info</string>
    <string name="image_description">Picture of player</string>
    <string name="club_text">Club:</string>
    <string name="height_text">Height:</string>
    <string name="weight_text">Weight:</string>
    <string name="players">Players</string>
    <string name="alert_button">OK</string>
    <string name="log_in_button">Log in</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_error">Wrong username or password</string>
    <string name="username_format">Username needs at least 4 characters, only letters and numbers</string>
    <string name="wrong_username">Wrong username</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password_format">Password needs at least 6 characters, 1 uppercase letter, 1 number nad 1 special character</string>
    <string name="empty_fields">"Both fields are required"</string>
    <string name="logout_message">Hope to see you again</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="email">Email</string>
    <string name="passwordConfirmation">Confirm password</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="privacyPolicy"><a href="https://en.wikipedia.org/wiki/Privacy_policy">Privacy policy</a></string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="createAccount">Create account</string>
    <string name="backToLogin">Back to login</string>
    <string name="createNewAccount">Create new account</string>
    <string name="pickDate">Pick date</string>
    <string name="allFieldsRequired">All fields are required</string>
    <string name="firstnameFormat">First name can only use letters, and needs 1 uppercase letter</string>
    <string name="lastnameFormat">Last name can only use letters</string>
    <string name="passwordsDontMatch">Passwords are not matching</string>
    <string name="emailFormat">Wrong email format</string>
    <string name="tooYoung">Only people older than 18 can register</string>
</resources>